<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/pink">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/material_dynamic_secondary90"
        app:cardElevation="10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearance="@style/Widget.MaterialComponents.BottomAppBar.Colored">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_type_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_for_item_view"
                android:hint="@string/type_note"
                app:startIconDrawable="@drawable/baseline_edit_note_24">

                <AutoCompleteTextView
                    android:id="@+id/type_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    android:text="@string/note"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_data_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_for_item_view"
                android:hint="@string/data_note"
                app:startIconDrawable="@drawable/baseline_edit_calendar_24">

                <AutoCompleteTextView
                    android:id="@+id/data_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_time_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_for_item_view"
                android:visibility="gone"
                android:hint="@string/time_note"
                app:startIconDrawable="@drawable/baseline_access_time_24">

                <AutoCompleteTextView
                    android:id="@+id/time_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/margin_for_item_view"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_for_item_view"
            android:hint="@string/title_note">

            <com.example.taskplanner.data.model.LinedEditText
                android:id="@+id/edit_title_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="5"
                android:gravity="top"
                android:hint=""
                android:inputType="textMultiLine"
                android:lines="7" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_for_action_button"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_check_24"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
