<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/Fragment">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        style="@style/CustomCardViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_type_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_for_item_view"
                android:hint="@string/type_note"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/baseline_edit_note_24">

                <AutoCompleteTextView
                    android:id="@+id/type_note"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    android:text="@string/note"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_data_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_margin="@dimen/margin_for_item_view"
                android:hint="@string/data_note"
                app:startIconDrawable="@drawable/baseline_edit_calendar_24">

                <AutoCompleteTextView
                    android:id="@+id/data_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/container_time_note"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                android:layout_margin="@dimen/margin_for_item_view"
                android:hint="@string/time_note"
                android:visibility="gone"
                app:startIconDrawable="@drawable/baseline_access_time_24">

                <AutoCompleteTextView
                    android:id="@+id/time_note"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:backgroundTint="@color/material_on_primary_emphasis_medium"
                    android:inputType="none"
                    tools:ignore="LabelFor,MissingConstraints" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>


    <ScrollView
        android:id="@+id/scroll_for_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:scrollbars="none"
        android:layout_margin="@dimen/margin_for_item_view"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/card"
        app:layout_constraintBottom_toTopOf="@id/add_new_task">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/linear_for_input_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/card">

            </LinearLayout>

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button_plus"
                style="@style/MiniFloatingActionButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/margin_for_action_button"
                android:contentDescription="@string/floating_action_button"
                android:src="@drawable/baseline_add_24"
                android:layout_gravity="end"
                android:visibility="gone" />

        </LinearLayout>
        
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_new_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_for_action_button"
        android:contentDescription="@string/desc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_check_24"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>
